generated_nginx_dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  creationTimestamp: 2019-07-08T13:12:16Z
  generation: 1
  labels:
    run: nginx-generater
  name: nginx-generater
  namespace: myproject
  resourceVersion: "68371"
  selfLink: /apis/apps.openshift.io/v1/namespaces/myproject/deploymentconfigs/nginx-generater
  uid: 01e16368-a182-11e9-876e-08002794c448
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    run: nginx-generater
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: nginx-generater
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx-generater
        resources: {}
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2019-07-08T13:12:59Z
    lastUpdateTime: 2019-07-08T13:12:59Z
    message: Deployment config has minimum availability.
    status: "True"
    type: Available
  - lastTransitionTime: 2019-07-08T13:12:20Z
    lastUpdateTime: 2019-07-08T13:13:00Z
    message: replication controller "nginx-generater-1" successfully rolled out
    reason: NewReplicationControllerAvailable
    status: "True"
    type: Progressing
  details:
    causes:
    - type: ConfigChange
    message: config change
  latestVersion: 1
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  unavailableReplicas: 0
  updatedReplicas: 1
