opp_dc_final.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  
  labels:
    run: opp-app
  name: opp-app
  namespace: myproject
  
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    run: opp-app
  
  template:
    metadata:
      labels:
        run: opp-app
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              value: 'mysql2://root:root!@128.179.146.8:3306/db1'
          image: 'openproject/community:9'
          name: op-pod
          volumeMounts:
            - mountPath: /usr/share/ops
              name: nfsvol-2
      volumes:
        - name: nfsvol-2
          persistentVolumeClaim:
            claimName: nfs-pvc
  triggers:
    - type: ConfigChange
