my-nginx-routes.yaml
apiVersion: v1
kind: Rout
apiVersion: v1
kind: Route
metadata:
    name: my-nginx-app
spec:
    host: 192.168.99.100.nip.io
    path: "/"
    to:
        kind: Service
        name: my-nginx-svc
