opp_rt.yaml
apiVersion: v1
kind: Route
metadata:
    name: opp-app
spec:
    host: opp-app-myproject.192.168.99.100.nip.io
    port:
        targetPort: 80
    to:
        kind: Service
        name: opp-app
